before DB integration

--- a/MyToDo/src/main/resources/application.properties
+++ b/MyToDo/src/main/resources/application.properties
@@ -1,1 +1,26 @@
 spring.application.name=MyToDo
+spring.devtools.add-properties = false
+
+spring.mvc.format.date = yyyy-MM-dd
+
+#Html view configuration for static path of .jsp files
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+#to get deeper logging information for any error
+logging.level.org.springframework=DEBUG
+
+spring.datasource.url = jdbc:h2:mem:testdb
+
+#for visible changes in the browser without restarting app
+server.servlet.jsp.init-parameters.development=true
+spring.mvc.view.cache=false
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.driverClassName=org.h2.Driver
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
